--- a/swipe_dispatcher.properties
+++ b/swipe_dispatcher.properties
@@ -11,7 +11,7 @@ rabbitMQ_HOST = localhost
 rabbitMQ_PORT = 15672
 rabbitMQ_admin_username = guest
 rabbitMQ_admin_password = guest
-queue_name = AIS
+queue_name = SWIPE
 
 KCS_HOST = localhost
 #KCS_HOST = 192.168.24.34
